--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.3.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "typescript": "^4.9.0"
