--- a/package.json
+++ b/package.json
@@ -20,22 +20,18 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tremor/react": "^3.14.1",
-    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
-    "dotenv": "^16.4.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "express": "^4.18.3",
     "firebase": "^10.8.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.18.2",
     "globals": "^16.1.0",
-    "helmet": "^7.1.0",
     "html2canvas": "^1.4.1",
+    "iyzipay": "^2.0.64",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.358.0",
-    "morgan": "^1.10.0",
     "openai": "^3.3.0",
     "papaparse": "^5.5.2",
     "postcss-import": "^16.1.0",
@@ -43,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-feather": "^2.0.9",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
